# training_oop

./: README.md  pyproject.toml
src/: base_product.py  category.py  iter_category.py  main.py  mixin_log.py  product.py  utils.py
tests/: conftest.py  test_category.py  test_iter_category.py  test_mixin_log.py  test_product.py  test_utils.py
